; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/kconfig/extr_util.c_str_assign.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/kconfig/extr_util.c_str_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gstr = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i64, i32 } @str_assign(i8* %0) #0 {
  %2 = alloca %struct.gstr, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @strdup(i8* %4)
  %6 = getelementptr inbounds %struct.gstr, %struct.gstr* %2, i32 0, i32 1
  store i32 %5, i32* %6, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @strlen(i8* %7)
  %9 = add nsw i64 %8, 1
  %10 = getelementptr inbounds %struct.gstr, %struct.gstr* %2, i32 0, i32 0
  store i64 %9, i64* %10, align 8
  %11 = bitcast %struct.gstr* %2 to { i64, i32 }*
  %12 = load { i64, i32 }, { i64, i32 }* %11, align 8
  ret { i64, i32 } %12
}

declare dso_local i32 @strdup(i8*) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
